load("@rules_scala//scala:scala.bzl", "scala_library", "scala_test")

package(
    default_visibility = ["//dicer:internal"],
)

scala_library(
    name = "config",
    srcs = [
        "src/InternalClientConfig.scala",
        "src/SliceLookupConfig.scala",
    ],
    deps = [
        "//dicer/common:client_type",
        "//dicer/common:watch_server_helper",
        "//dicer/external:conf",
        "//wrappers/rpc:client",
        "//wrappers/rpc:rpc_tls",
    ],
)

scala_library(
    name = "metrics",
    srcs = ["src/ClientMetrics.scala"],
    deps = [
        "//caching/util:unix_time_version",
        "//dicer/common:client_type",
        "//dicer/common:generation",
        "//dicer/common:target_helper",
        "//dicer/common:version",
        "//dicer/external:conf",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@maven//:io_prometheus_simpleclient",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "client_dpage",
    srcs = ["src/ClientDPage.scala"],
    visibility = ["//dicer:internal"],
    deps = [
        "//caching/util:prefix_logger",
        "//dicer/client/proto:client_dpage_proto_scala_lib",
        "//wrappers/util:jsonutil",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "slicez",
    srcs = ["src/ClientSlicez.scala"],
    exports = ["//dicer/common:zpage_helpers"],
    deps = [
        ":client_dpage",
        "//caching/util:ascii_table",
        "//caching/util:sequential_execution_context",
        "//dicer/client/proto:client_dpage_proto_scala_lib",
        "//dicer/common/proto:dpage_proto_scala_lib",
        "//dicer/common:assignment_core",
        "//dicer/common:dpage_view_helpers",
        "//dicer/common:generation",
        "//dicer/common:zpage_helpers",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:squid",
        "//wrappers/deployment:infra_data_model_lib",
        "//wrappers/deployment:kubernetes_cluster",
        "//wrappers/instrumentation",
        "//wrappers/logging",
        "//wrappers/util:jsonutil",
        "@maven//:com_lihaoyi_geny_2_12",
        "@maven//:com_lihaoyi_scalatags_2_12",
    ],
)

scala_library(
    name = "sync",
    srcs = ["src/AssignmentSyncStateMachine.scala"],
    deps = [
        ":config",
        ":metrics",
        "//caching/util:exponential_backoff",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:state_machine",
        "//caching/util:ticker_time",
        "//caching/util:token_bucket",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:generation",
        "//dicer/common:target_helper",
        "//dicer/external:conf",
        "//wrappers/logging",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "watch_address_helper",
    srcs = ["src/WatchAddressHelper.scala"],
)

scala_library(
    name = "watch",
    srcs = [
        "src/WatchStubManager.scala",
    ],
    deps = [
        ":config",
        "//caching/util:status_or",
        "//dicer/common:watch_server_helper",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/external:conf",
        "//wrappers/rpc:rpc_tls",
        "//wrappers/util:scheduled_executor",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:com_github_blemale_scaffeine_2_12",
        "@maven//:com_google_guava_guava",
        "@maven//:com_lihaoyi_geny_2_12",
        "@maven//:com_lihaoyi_scalatags_2_12",
        "@scala_proto_rules_grpc_api",
    ],
)


scala_library(
    name = "dicer_client_proto_logger",
    srcs = ["src/DicerClientProtoLogger.scala"],
    visibility = ["//dicer:internal"],
    deps = [
        ":dicer_client_proto_logger_conf",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//dicer/common:client_type",
        "//dicer/common:generation",
    ],
)

scala_library(
    name = "dicer_client_proto_logger_conf",
    srcs = ["src/DicerClientProtoLoggerConf.scala"],
    exports = [
        "//wrappers/conf:raw_config_singleton",
        "//wrappers/feature-flag",
    ],
    visibility = ["//dicer:internal"],
    deps = [
        "//wrappers/conf:raw_config_singleton",
        "//wrappers/feature-flag",
    ],
)

scala_library(
    name = "testable_dicer_client_proto_logger_conf",
    srcs = ["test/TestableDicerClientProtoLoggerConf.scala"],
    exports = [":dicer_client_proto_logger_conf"],
    testonly = True,
    visibility = ["//dicer:internal"],
    deps = [":dicer_client_proto_logger_conf"],
)

scala_library(
    name = "lookup",
    srcs = [
        "src/SliceLookup.scala",
        "src/SliceLookupCache.scala",
    ],
    exports = ["//wrappers/instrumentation:scaffeine-cache-exporter"],
    deps = [
        ":config",
        ":dicer_client_proto_logger",
        ":dicer_client_proto_logger_conf",
        ":metrics",
        ":slicez",
        ":sync",
        ":watch",
        "//caching/util:cancellable",
        "//caching/util:generic_rpc_service_builder",
        "//caching/util:lock",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:state_machine",
        "//caching/util:status_utils",
        "//caching/util:watch_cell",
        "//caching/util:where_am_i_helper",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:client_type",
        "//dicer/common:generation",
        "//dicer/common:subscriber_handler",
        "//dicer/common:target_unmarshaller",
        "//dicer/common:watch_server_helper",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:squid",
        "//wrappers/instrumentation:scaffeine-cache-exporter",
        "//wrappers/logging",
        "//wrappers/logging:activity-context-factory",
        "//wrappers/logging:ctx",
        "//wrappers/rpc:rpc_context",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:com_github_blemale_scaffeine_2_12",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:io_grpc_grpc_api",
    ],
)

scala_library(
    name = "client",
    exports = [
        ":config",
        ":lookup",
        ":metrics",
        ":slicez",
        ":sync",
        ":watch",
    ],
    deps = [
        ":config",
        ":lookup",
        ":metrics",
        ":slicez",
        ":sync",
        ":watch",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:com_github_blemale_scaffeine_2_12",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_lihaoyi_geny_2_12",
        "@maven//:com_lihaoyi_scalatags_2_12",
        "@maven//:io_prometheus_simpleclient",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "clerk_metrics",
    srcs = ["src/ClerkMetrics.scala"],
    deps = [
        "//dicer/common:target_helper",
        "//dicer/external:conf",
        "@maven//:io_prometheus_simpleclient",
    ],
)

scala_library(
    name = "clerk_impl",
    srcs = [
        "src/ClerkImpl.scala",
        "src/ResourceRouter.scala",
    ],
    exports = [
        ":config",
        "//wrappers/rpc:rpc_tls",
    ],
    deps = [
        ":clerk_metrics",
        ":config",
        ":dicer_client_proto_logger",
        ":dicer_client_proto_logger_conf",
        ":lookup",
        ":metrics",
        ":slicez",
        "//caching/util:assert_macros",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:watch_cell",
        "//caching/util:where_am_i_helper",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:client_type",
        "//dicer/common:generation",
        "//dicer/common:version",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/instrumentation:scaffeine-cache-exporter",
        "//wrappers/logging",
        "//wrappers/rpc:rpc_context",
        "//wrappers/rpc:rpc_tls",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:com_github_blemale_scaffeine_2_12",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:io_grpc_grpc_api",
    ],
)

scala_library(
    name = "slicelet_impl",
    srcs = [
        "src/SliceletImpl.scala",
        "src/SliceletLoadAccumulator.scala",
        "src/SliceletMetrics.scala",
    ],
    deps = [
        ":config",
        ":dicer_client_proto_logger",
        ":dicer_client_proto_logger_conf",
        ":lookup",
        ":metrics",
        ":slicez",
        ":watch_address_helper",
        "//caching/util:assert_macros",
        "//caching/util:ewma_counter",
        "//caching/util:generic_rpc_service_builder",
        "//caching/util:instantiation_tracker",
        "//caching/util:lock",
        "//caching/util:lossy_ewma_counter",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:unix_time_version",
        "//caching/util:watch_cell",
        "//caching/util:watch_cell_adapter",
        "//caching/util:where_am_i_helper",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:client_type",
        "//dicer/common:generation",
        "//dicer/common:sliceset_impl",
        "//dicer/common:target_helper",
        "//dicer/common:version",
        "//dicer/common:watch_server_conf",
        "//dicer/common:watch_server_helper",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/external:slicelet_listener",
        "//dicer/friend:shutdown_hook_constants",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//dicer/friend:state_transfer_common",
        "//wrappers/rpc:readiness_probe_tracker",
        "//wrappers/rpc:rpc_context",
        "//wrappers/rpc:rpc_server",
        "//wrappers/rpc:rpc_tls",
        "//wrappers/util:jsonutil",
        "//wrappers/util:shutdown-hook-manager",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_prometheus_simpleclient",
    ],
)

scala_library(
    name = "ports",
    srcs = ["src/Ports.scala"],
)

scala_library(
    name = "test_client",
    srcs = ["test/TestClientUtils.scala"],
    testonly = True,
    deps = [
        ":testable_dicer_client_proto_logger_conf",
        "//caching/util:assert_macros",
        "//caching/util:lock",
        "//caching/util:metric_utils",
        "//caching/util:non_reentrant_lock",
        "//caching/util:sequential_execution_context",
        "//caching/util:test_util",
        "//dicer/client:slicelet_impl",
        "//dicer/common:assignment_core",
        "//dicer/common:generation",
        "//dicer/common:internal_client_conf",
        "//dicer/common:sliceset_impl",
        "//dicer/common:target_helper",
        "//dicer/external:clerk",
        "//dicer/external:external_common",
        "//dicer/external:slicelet",
        "//dicer/friend:squid",
        "//wrappers/conf:core",
        "//wrappers/conf:current_project",
        "//wrappers/conf:project",
        "//wrappers/conf:project-conf",
        "//wrappers/rpc:rpc_context",
        "//wrappers/rpc:rpc_server",
        "//wrappers/rpc:rpc_testing",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:com_typesafe_config",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_prometheus_simpleclient",
    ],
)

scala_test(
    name = "assignment_sync_state_machine_test",
    srcs = ["test/AssignmentSyncStateMachineSuite.scala"],
    timeout = "short",
    deps = [
        ":config",
        ":sync",
        ":test_client",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:fake_typed_clock",
        "//caching/util:state_machine",
        "//caching/util:test_state_machine_driver",
        "//caching/util:test_util",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:client_type",
        "//dicer/common:generation",
        "//dicer/common:test_common",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/rpc:rpc_testing",
        "//wrappers/rpc:rpc_tls",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "watch_address_helper_test",
    srcs = ["test/WatchAddressHelperSuite.scala"],
    timeout = "short",
    deps = [
        ":watch_address_helper",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "internal_client_config_test",
    srcs = ["test/InternalClientConfigSuite.scala"],
    timeout = "short",
    deps = [
        ":config",
        ":test_client",
        "//caching/util:test_utils",
        "//dicer/common:client_type",
        "//dicer/external:conf",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "slice_lookup_cache_test",
    srcs = ["test/SliceLookupCacheSuite.scala"],
    timeout = "short",
    deps = [
        ":config",
        ":dicer_client_proto_logger",
        ":lookup",
        ":slicez",
        ":test_client",
        ":testable_dicer_client_proto_logger_conf",
        "//caching/util:metric_utils",
        "//caching/util:sequential_execution_context",
        "//caching/util:test_util",
        "//dicer/common:client_type",
        "//dicer/common:target_helper",
        "//dicer/external:conf",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:io_prometheus_simpleclient",
    ],
)

scala_test(
    name = "clerk_impl_test",
    srcs = ["test/ClerkImplSuite.scala"],
    timeout = "short",
    deps = [
        ":clerk_impl",
        ":metrics",
        ":slicez",
        ":test_client",
        ":testable_dicer_client_proto_logger_conf",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:fake_typed_clock",
        "//caching/util:metric_utils",
        "//caching/util:sequential_execution_context",
        "//caching/util:server_conf",
        "//caching/util:test_util",
        "//dicer/assigner/config:internal_target_config_map",
        "//dicer/assigner:assigner_slicez",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:client_type",
        "//dicer/common:generation",
        "//dicer/common:target_helper",
        "//dicer/common:test_common",
        "//dicer/common:test_environment",
        "//dicer/common:version",
        "//dicer/external:clerk",
        "//dicer/external:external_common",
        "//dicer/external:slicelet",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/conf:core",
        "//wrappers/conf:current_project",
        "//wrappers/conf:location",
        "//wrappers/conf:project",
        "//wrappers/conf:project-conf",
        "//wrappers/rpc:rpc_ssl",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@maven//:io_prometheus_simpleclient",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "client_slicez_test",
    srcs = [
        "test/ClientSlicezSuite.scala",
        "test/ClientSlicezTestHelper.scala",
    ],
    timeout = "short",
    deps = [
        ":dicer_client_proto_logger",
        ":dicer_client_proto_logger_conf",
        ":slicez",
        ":test_client",
        ":testable_dicer_client_proto_logger_conf",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:test_util",
        "//dicer/assigner/algorithm",
        "//dicer/assigner/config:internal_target_config",
        "//dicer/client:config",
        "//dicer/client:lookup",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:client_type",
        "//dicer/common:generation",
        "//dicer/common:test_common",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/rpc:rpc_testing",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:com_lihaoyi_geny_2_12",
        "@maven//:com_lihaoyi_scalatags_2_12",
        "@maven//:org_apache_commons_commons_text",
    ],
)

scala_library(
    name = "slice_lookup_driver",
    srcs = ["test/SliceLookupDriver.scala"],
    testonly = True,
    deps = [
        ":client",
        ":lookup",
        ":slicez",
        "//caching/util:server_conf",
        "//caching/util:test_utils",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:generation",
        "//dicer/common:sliceset_impl",
        "//dicer/common:test_common",
        "//dicer/common:zpage_helpers",
        "//dicer/external:external_common",
        "//dicer/external:slicelet",
        "//dicer/friend:squid",
        "//wrappers/rpc:client",
        "//wrappers/rpc:rpc_context",
        "//wrappers/rpc:rpc_testing",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:io_grpc_grpc_api",
    ],
)

scala_library(
    name = "slice_lookup_base",
    srcs = ["test/SliceLookupSuiteBase.scala"],
    testonly = True,
    deps = [
        ":client",
        ":config",
        ":dicer_client_proto_logger_conf",
        ":slice_lookup_driver",
        ":test_client",
        ":testable_dicer_client_proto_logger_conf",
        "//caching/util:fake_proxy",
        "//caching/util:fake_s2s_proxy_metadata_handler",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:fake_typed_clock",
        "//caching/util:metric_utils",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:server_conf",
        "//caching/util:test_util",
        "//caching/util:watch_cell",
        "//dicer/assigner",
        "//dicer/assigner/config:internal_target_config_map",
        "//dicer/assigner:assigner_conf",
        "//dicer/assigner:assigner_slicez",
        "//dicer/assigner:generator",
        "//dicer/assigner:target_metrics_utils",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:client_type",
        "//dicer/common:generation",
        "//dicer/common:sliceset_impl",
        "//dicer/common:target_helper",
        "//dicer/common:test_common",
        "//dicer/common:test_environment",
        "//dicer/external:external_common",
        "//dicer/external:slicelet",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/conf:core",
        "//wrappers/conf:current_project",
        "//wrappers/conf:project",
        "//wrappers/conf:project-conf",
        "//wrappers/logging",
        "//wrappers/rpc:client",
        "//wrappers/rpc:headers",
        "//wrappers/rpc:rpc_context",
        "//wrappers/rpc:rpc_testing",
        "//wrappers/rpc:rpc_tls",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@maven//:com_typesafe_config",
        "@maven//:io_grpc_grpc_api",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "scala_slice_lookup_suite",
    srcs = [
        "test/ScalaSliceLookupSuite.scala",
        "test/ScalaSliceLookupSuiteBase.scala",
    ],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":client",
        ":dicer_client_proto_logger",
        ":slice_lookup_base",
        ":slice_lookup_driver",
        ":test_client",
        ":testable_dicer_client_proto_logger_conf",
        "//caching/util:fake_proxy",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:fake_typed_clock",
        "//caching/util:metric_utils",
        "//caching/util:sequential_execution_context",
        "//caching/util:test_util",
        "//caching/util:watch_cell",
        "//dicer/assigner:assigner_slicez",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:client_type",
        "//dicer/common:generation",
        "//dicer/common:test_assigner",
        "//dicer/common:test_common",
        "//dicer/common:test_environment",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/external:slicelet",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/logging",
        "//wrappers/rpc:rpc_testing",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@maven//:io_prometheus_simpleclient",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "slicelet_load_accumulator_test",
    srcs = ["test/SliceletLoadAccumulatorSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":slicelet_impl",
        ":test_client",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:fake_typed_clock",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:generation",
        "//dicer/common:slice_helper",
        "//dicer/common:test_common",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/rpc:rpc_testing",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "top_keys_test",
    srcs = ["test/TopKeysSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":slicelet_impl",
        "//caching/util:assert_macros",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:sequential_execution_context",
        "//caching/util:server_conf",
        "//caching/util:test_util",
        "//dicer/assigner",
        "//dicer/assigner/config:internal_target_config_map",
        "//dicer/assigner:assigner_conf",
        "//dicer/assigner:assigner_slicez",
        "//dicer/assigner:etcd_preferred_assigner_driver",
        "//dicer/assigner:interposing_preferred_assigner",
        "//dicer/assigner:preferred_assigner_driver",
        "//dicer/assigner:testable_assigner_conf",
        "//dicer/common:client_request",
        "//dicer/common:generation",
        "//dicer/common:test_common",
        "//dicer/common:test_environment",
        "//dicer/external/proto",
        "//dicer/external:external_common",
        "//dicer/external:slicelet",
        "//dicer/friend:squid",
        "//wrappers/conf:core",
        "//wrappers/conf:current_project",
        "//wrappers/conf:project",
        "//wrappers/conf:project-conf",
        "//wrappers/rpc:rpc_testing",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@maven//:com_typesafe_config",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "clerk_metrics_test",
    srcs = ["test/ClerkMetricsSuite.scala"],
    timeout = "short",
    deps = [
        ":clerk_metrics",
        "//caching/util:metric_utils",
        "//caching/util:test_util",
        "//dicer/common:target_helper",
        "//dicer/external:conf",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:io_prometheus_simpleclient",
    ],
)
